Update MonthWithReference.java
Mod: List.of