@@ -7,7 +7,7 @@ public class MonthWithReference {
 
 	public static void main(String[] args) {
 
-		List<String> monthList = Arrays.asList("gener", "febrer", "març", "abril", "maig", "juny", "juliol", "agost",
+		List<String> monthList = List.of("gener", "febrer", "març", "abril", "maig", "juny", "juliol", "agost",
 				"setembre", "octubre", "novembre", "desembre");
 		
 		printMonth(monthList);
